# OpenGL

./: CMakeLists.txt
Main/: 2  3
lib/: Building.h  DrawableObject.h  EBO.h  Texture.h  VBO.h  camera.h  root_directory.h  root_directory.h.in  shaderClass.h  shader_m.h
lib/freetype/config/: ftoption.h
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/learnopengl/: camera.h
src/: Building.cpp  EBO.cpp  Texture.cpp  VBO.cpp  main.cpp
src/shaders/: 7.4.camera.fs.txt  7.4.camera.vs.txt  default.vert
